--- a/code/py-notes.ipynb
+++ b/code/py-notes.ipynb
@@ -138,6 +138,32 @@
     "plt.stem(n, X_m)\n",
     "plt.xticks([0, 2, 4, 6], ['0', '2', '4', '6'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24fd2fea-0803-485e-a69e-092e21e3c0ee",
+   "metadata": {},
+   "source": [
+    "# General functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5b7754e-14be-4cb4-b45c-425f659083df",
+   "metadata": {},
+   "source": [
+    "* Create an array of zeros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "820e2129-3f2c-47ed-9a07-3f9c9aaac841",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.zeros(N)"
+   ]
   }
  ],
  "metadata": {
