--- a/code/py-notes.ipynb
+++ b/code/py-notes.ipynb
@@ -164,6 +164,24 @@
    "source": [
     "y = np.zeros(N)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b641bb34-0e49-407d-87fe-faa6fbb9177c",
+   "metadata": {},
+   "source": [
+    "* Compare 2 numerical arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5071a327-a0b4-47eb-9fe3-495c98961342",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.allclose(X, Y)"
+   ]
   }
  ],
  "metadata": {
