Finish ch0309 notes

--- a/code/ch03.ipynb
+++ b/code/ch03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e4dd23a8",
    "metadata": {},
    "outputs": [],
@@ -278,35 +278,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8d24df95-4300-47f5-9b9b-f2edf31e3a0d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16\n",
-      "window is: [0.         0.04322727 0.1654347  0.3454915  0.55226423 0.75\n",
-      " 0.9045085  0.9890738  0.9890738  0.9045085  0.75       0.55226423\n",
-      " 0.3454915  0.1654347  0.04322727 0.        ]\n",
-      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
-      "window_manual is: [0.         0.04322727 0.1654347  0.3454915  0.55226423 0.75\n",
-      " 0.9045085  0.9890738  0.9890738  0.9045085  0.75       0.55226423\n",
-      " 0.3454915  0.1654347  0.04322727 0.        ]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# https://numpy.org/doc/stable/reference/generated/numpy.hanning.html\n",
     "N = 16\n",
@@ -333,30 +308,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ee5d0029-f14d-4d59-8f45-33c69120f262",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "window is: [0.08       0.11976909 0.23219992 0.39785218 0.58808309 0.77\n",
-      " 0.91214782 0.9899479  0.9899479  0.91214782 0.77       0.58808309\n",
-      " 0.39785218 0.23219992 0.11976909 0.08      ]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# https://numpy.org/doc/stable/reference/generated/numpy.hamming.html\n",
     "\n",
@@ -415,6 +370,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75ffdf2c-4d75-4e72-9ce6-32b6a67e7cd8",
+   "metadata": {},
+   "source": [
+    "* Hanning window"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "96fade7d",
@@ -422,7 +385,7 @@
    "outputs": [],
    "source": [
     "# https://numpy.org/doc/stable/reference/generated/numpy.hanning.html\n",
-    "N = 64\n",
+    "N = 128\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from numpy.fft import fft, fftshift\n",
@@ -431,10 +394,7 @@
     "plt.title(\"Hann window\")\n",
     "plt.ylabel(\"Amplitude\")\n",
     "plt.xlabel(\"Sample\")\n",
-    "plt.show()\n",
-    "\n",
-    "print(window)\n",
-    "print(f'The window size is: {window.size}')"
+    "plt.show()"
    ]
   },
   {
@@ -451,13 +411,13 @@
     "with np.errstate(divide='ignore', invalid='ignore'):\n",
     "    response = 20 * np.log10(mag)\n",
     "response = np.clip(response, -100, 100)\n",
-    "plt.plot(freq, response)\n",
+    "plt.plot(freq, response, '-.')\n",
     "plt.title(\"Frequency response of the Hann window\")\n",
     "plt.ylabel(\"Magnitude [dB]\")\n",
     "plt.xlabel(\"Normalized frequency [cycles per sample]\")\n",
     "plt.axis('tight')\n",
     "plt.xlim([0, 0.12])\n",
-    "plt.ylim([-60, 5])\n",
+    "plt.ylim([-60, 1])\n",
     "plt.show()"
    ]
   },
@@ -468,6 +428,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# https://numpy.org/doc/stable/reference/generated/numpy.hamming.html\n",
+    "\n",
     "window = np.hamming(N)\n",
     "plt.plot(window)\n",
     "plt.title(\"Hamming window\")\n",
@@ -480,7 +442,7 @@
     "freq = np.linspace(-0.5, 0.5, len(A))\n",
     "response = 20 * np.log10(mag)\n",
     "response = np.clip(response, -100, 100)\n",
-    "plt.plot(freq, response)\n",
+    "plt.plot(freq, response, '-.')\n",
     "plt.title(\"Frequency response of Hamming window\")\n",
     "plt.ylabel(\"Magnitude [dB]\")\n",
     "plt.xlabel(\"Normalized frequency [cycles per sample]\")\n",
@@ -491,9 +453,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "372e240a-65a1-41c2-ac52-aa6d4370078c",
+   "metadata": {},
+   "source": [
+    "* Apply hanning window with 3.4 cycles sine wave"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9da7809e",
+   "id": "c368e999-e5ed-4fc6-816d-17966d803342",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N  = 64\n",
+    "n  = np.arange(0, N, 1)\n",
+    "k = 3.4\n",
+    "fs = 1000 * 64  # Sampling rate in Hz\n",
+    "ts = 1.0 / fs\n",
+    "fo = 1000 * k   # 3.4 full cycles for 64 samples\n",
+    "fo1 = 1000 * 7  # 7.0 full cycles for 64 samples\n",
+    "x = 1.0*np.sin(2*np.pi*fo*n*ts) + 0.1*np.sin(2*np.pi*fo1*n*ts)\n",
+    "# x = 1.0*np.sin(2*np.pi*fo*n*ts)\n",
+    "plt.figure()\n",
+    "plt.stem(n, x * np.hanning(N + 1)[:N])\n",
+    "\n",
+    "plt.figure()\n",
+    "X = fft(x)\n",
+    "plt.xlabel('m');\n",
+    "plt.ylabel(r'$|X[m]|$');\n",
+    "plt.xlim([0, 32])\n",
+    "plt.title(r'Plot of signal $|X(m)|$');\n",
+    "X_m = np.absolute(X)\n",
+    "plt.stem(n, X_m, 'o')\n",
+    "\n",
+    "x_win = x * np.hanning(N + 1)[:N]\n",
+    "X_win = fft(x_win)\n",
+    "X_win_m = np.absolute(X_win)\n",
+    "plt.stem(n, X_win_m, 'r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb320e0e-fb22-4fdd-8643-89ab358c2044",
    "metadata": {},
    "outputs": [],
    "source": []
